--- a/task47.html
+++ b/task47.html
@@ -45,6 +45,6 @@
       <button id="startButton">Start</button>
       <button id="stopButton" disabled>Stop</button>
     </div>
-    <script src="scripts/script9.js"></script>
+    <script src="script9.js"></script>
   </body>
 </html>
