--- a/task48.html
+++ b/task48.html
@@ -146,6 +146,6 @@
         <input type="submit" value="Register" id="registerBtn" />
       </div>
     </form>
-    <script src="scripts/script10.js"></script>
+    <script src="script10.js"></script>
   </body>
 </html>
