--- a/task45.html
+++ b/task45.html
@@ -50,6 +50,6 @@
 
       <input type="submit" value="Submit" class="form-control" />
     </form>
-    <script src="scripts/script7.js"></script>
+    <script src="script7.js"></script>
   </body>
 </html>
